- Small theme styling fixes by EmizenTech. - Added gc-single-series-sermons-img class. - Removed unnecessary code from content-taxonomy-series.php, can see in archive.php what is no longer in this file. - Sanitization callbacks added to functions.php for Customizer options. - Location Drop-Down has been moved. - taxonomy-gc-sermon-series updated to show image at top center. - Fixed a typo in functions.php use of $slug.

--- a/css/selectric.css
+++ b/css/selectric.css
@@ -131,7 +131,7 @@
 }
 .selectric-items .selectric-scroll {
   height: 100%;
-  overflow: auto;
+  overflow: auto; text-align: center;
 }
 .selectric-above .selectric-items {
   top: auto;
