--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ img{max-width:100%; height:auto; border:none; outline:none;}
 .clearfix:after, .clearfix:before{display:table; content:""; visibility:hidden; font-size:0; height:auto; clear:both;}
 .clearfix:before{display:table; content:""; clear:both;}
 .clear{clear:both;}
-.aligncenter{text-align: center;}
+.aligncenter{text-align: center!important;}
 .wp-caption{text-align: none;}
 .wp-caption-text{text-align: none;}
 .gallery-caption{text-align: none;}
@@ -81,8 +81,7 @@ input[type="text"], select, textarea{
     font-size: 14px;
     line-height: 1.42857143;
     color: #555555;
-    background-color: #ffffff;
-    background-image: none;
+    background: #ffffff none;
     border: 1px solid #cccccc;
     border-radius: 4px;
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -191,7 +190,7 @@ textarea{ height:140px;}
 .one_box .tb_list img{ position:relative; z-index:1; display:inline-block; margin:0 auto;}
 .one_box .tb_list .tb_item{ width:100%; border:5px solid #fff; position:relative; box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box; text-align:center; list-style:none;}
 .one_box .tb_list .tb_item .tb_item_content{ position:absolute; z-index:2; top:0; left:0; width:100%; height:100%; text-align:center;}
-.one_box .tb_list .tb_item .tb_item_content apan{ position:absolute; top:50%; color:#fff; width:100%; left:0; padding:10px; text-align:center; text-align:center; font-family:Avenir Next LT Pro; font-size:40px; line-height:40px; text-transform:uppercase; z-index:3; transform:translateY(-50%); -moz-transform:translateY(-50%); -webkit-transform:translateY(-50%); -ms-transform:translateY(-50%);box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box;}
+.one_box .tb_list .tb_item .tb_item_content apan{ position:absolute; top:50%; color:#fff; width:100%; left:0; padding:10px; text-align:center; font-family:Avenir Next LT Pro; font-size:40px; line-height:40px; text-transform:uppercase; z-index:3; transform:translateY(-50%); -moz-transform:translateY(-50%); -webkit-transform:translateY(-50%); -ms-transform:translateY(-50%);box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box;}
 
 .two_box{ display:block; clear:both; padding:0;}
 .two_box:after{ display:block; clear:both; content:'';}
@@ -199,7 +198,7 @@ textarea{ height:140px;}
 .two_box .tb_list img{ position:relative; z-index:1; display:block;}
 .two_box .tb_list .tb_item{ width:50%; float:left; border:5px solid #fff; position:relative; box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box; list-style:none;}
 .two_box .tb_list .tb_item .tb_item_content{ position:absolute; z-index:2; top:0; left:0; width:100%; height:100%;}
-.two_box .tb_list .tb_item .tb_item_content span{ position:absolute; top:50%; color:#fff; width:100%; left:0; padding:10px; text-align:center; text-align:center; font-family:Avenir Next LT Pro; font-size:40px; line-height:40px; text-transform:uppercase; z-index:3; transform:translateY(-50%); -moz-transform:translateY(-50%); -webkit-transform:translateY(-50%); -ms-transform:translateY(-50%);box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box;}
+.two_box .tb_list .tb_item .tb_item_content span{ position:absolute; top:50%; color:#fff; width:100%; left:0; padding:10px; text-align:center; font-family:Avenir Next LT Pro; font-size:40px; line-height:40px; text-transform:uppercase; z-index:3; transform:translateY(-50%); -moz-transform:translateY(-50%); -webkit-transform:translateY(-50%); -ms-transform:translateY(-50%);box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box;}
 .tb_list .tb_item:last-child span {  text-align: right !important;}
 .three_box{ display:block; clear:both; padding:0;margin: -5px -10px;}
 .three_box:after{ display:block; clear:both; content:'';}
@@ -207,7 +206,7 @@ textarea{ height:140px;}
 .three_box .tb_list img{ position:relative; z-index:1; display:block;}
 .three_box .tb_list .tb_item{ width:33.33%; float:left; border:5px solid #fff; position:relative; box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box; list-style:none;}
 .three_box .tb_list .tb_item .tb_item_content{ position:absolute; z-index:2; top:0; left:0; width:100%; height:100%; margin-left: -7px;}
-.three_box .tb_list .tb_item .tb_item_content span{ position:absolute; top:50%; color:#fff; width:100%; left:0; padding:10px; text-align:center!important; text-align:center; font-family:Avenir Next LT Pro; font-size:40px; line-height:40px; text-transform:uppercase; z-index:3; transform:translateY(-50%); -moz-transform:translateY(-50%); -webkit-transform:translateY(-50%); -ms-transform:translateY(-50%);box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box; text-decoration:none;}
+.three_box .tb_list .tb_item .tb_item_content span{ position:absolute; top:50%; color:#fff; width:100%; left:0; padding:10px; text-align:center; font-family:Avenir Next LT Pro; font-size:40px; line-height:40px; text-transform:uppercase; z-index:3; transform:translateY(-50%); -moz-transform:translateY(-50%); -webkit-transform:translateY(-50%); -ms-transform:translateY(-50%);box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box; text-decoration:none;}
 
 #formsel {
     display: inline-block;
@@ -220,7 +219,7 @@ textarea{ height:140px;}
 .sbSelector:link, .sbSelector:visited, .sbSelector:hover { outline: medium none; text-decoration: none;}
 .sbSelector { color: #00568b; display: block; height: 24px; line-height:24px; left: 6%; outline: medium none; overflow: hidden; position: absolute; text-align: center; top: 0; width: 85%; z-index: 122;}
 .sbHolder:hover .sbSelector{ color:#58b4e5}
-.sbOptions { border-colors: none; background-color: #ffffff; border-color:-moz-use-text-color #00568b #00568b; border-image:none; border-radius:0 0 17px 17px; border-style:none solid solid; border-width:0 2px 2px; box-sizing:border-box; color:#228dc1; left: -2px; list-style: outside none none; margin: -10px 0 0; opacity: 0.9; overflow-y: auto; padding: 16px 0; position: absolute; top: 24px !important; width:200px; z-index: 2; top:28px;}
+.sbOptions { border-colors: none; background-color: #ffffff; border-color:-moz-use-text-color #00568b #00568b; border-image:none; border-radius:0 0 17px 17px; border-style:none solid solid; border-width:0 2px 2px; box-sizing:border-box; color:#228dc1; left: -2px; list-style: outside none none; margin: -10px 0 0; opacity: 0.9; overflow-y: auto; padding: 16px 0; position: absolute; width:200px; z-index: 2; top:28px;}
 .sbOptions li { color: #228dc1; padding: 0 7px;}
 .sbOptions li:first-child { display: none;}
 .sbOptions a { color: #4c9fc7; display: block; outline: medium none; padding: 7px 0 7px 3px; line-height:16px;}
@@ -431,7 +430,6 @@ textarea{ height:140px;}
         text-align:center;
         float:none;
         margin-left: 0;
-        text-align: center;
         width: 100%;
     }
     .sectionleftul li{
