--- a/css/selectric.css
+++ b/css/selectric.css
@@ -43,7 +43,6 @@
   color:#4c9fc7;
 }
 
-
 .selectric-hover .selectric {
   border-color: #337ab7;
 }
@@ -194,17 +193,14 @@
   padding-left: 25px;
 }
 
-
 /* 2/6/2016 */
-
 .social-area.clearfix {
   margin-right: -20px;
   margin-top: 0px !important;
 }
 
 /* 3/6/2016 */
-
-@media(max-width:767px)
+@media(max-width:813px) /* Was 767px */
 {
 .social-area.clearfix {
   margin-right: -20px;
