--- a/css/style.css
+++ b/css/style.css
@@ -181,31 +181,9 @@ textarea{ height:140px;}
 .entry-content .img_right{ float:right; margin-left:20px; margin-bottom:10px;}
 .entry-content ul{padding:0 30px;}
 .entry-content ul li { color: #333333; font-size:20px; line-height:26px; margin-bottom:10px; list-style:inside; }
+.entry-content ol { padding:0 30px; }
+.entry-content ol li { color: #333333; font-size:20px; line-height:26px; margin-bottom:10px; list-style:inside; list-style-type: decimal; }
 .entry-content hr{ clear:both; display:block;}
-
-.one_box{ display:block; clear:both; padding-top:10px;}
-.one_box:after{ display:block; clear:both; content:'';}
-.one_box .tb_list{ margin:0; padding:0; list-style:none;}
-.one_box .tb_list img{ position:relative; z-index:1; display:inline-block; margin:0 auto;}
-.one_box .tb_list .tb_item{ width:100%; border:5px solid #fff; position:relative; box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box; text-align:center; list-style:none;}
-.one_box .tb_list .tb_item .tb_item_content{ position:absolute; z-index:2; top:0; left:0; width:100%; height:100%; text-align:center;}
-.one_box .tb_list .tb_item .tb_item_content apan{ position:absolute; top:50%; color:#fff; width:100%; left:0; padding:10px; text-align:center; font-family:Avenir Next LT Pro; font-size:40px; line-height:40px; text-transform:uppercase; z-index:3; transform:translateY(-50%); -moz-transform:translateY(-50%); -webkit-transform:translateY(-50%); -ms-transform:translateY(-50%);box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box;}
-
-.two_box{ display:block; clear:both; padding:0;}
-.two_box:after{ display:block; clear:both; content:'';}
-.two_box .tb_list{ margin:0; padding:0; list-style:none;}
-.two_box .tb_list img{ position:relative; z-index:1; display:block;}
-.two_box .tb_list .tb_item{ width:50%; float:left; border:5px solid #fff; position:relative; box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box; list-style:none;}
-.two_box .tb_list .tb_item .tb_item_content{ position:absolute; z-index:2; top:0; left:0; width:100%; height:100%;}
-.two_box .tb_list .tb_item .tb_item_content span{ position:absolute; top:50%; color:#fff; width:100%; left:0; padding:10px; text-align:center; font-family:Avenir Next LT Pro; font-size:40px; line-height:40px; text-transform:uppercase; z-index:3; transform:translateY(-50%); -moz-transform:translateY(-50%); -webkit-transform:translateY(-50%); -ms-transform:translateY(-50%);box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box;}
-.tb_list .tb_item:last-child span {  text-align: right !important;}
-.three_box{ display:block; clear:both; padding:0;margin: -5px -10px;}
-.three_box:after{ display:block; clear:both; content:'';}
-.three_box .tb_list{ margin:0; padding:0; list-style:none;}
-.three_box .tb_list img{ position:relative; z-index:1; display:block;}
-.three_box .tb_list .tb_item{ width:33.33%; float:left; border:5px solid #fff; position:relative; box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box; list-style:none;}
-.three_box .tb_list .tb_item .tb_item_content{ position:absolute; z-index:2; top:0; left:0; width:100%; height:100%; margin-left: -7px;}
-.three_box .tb_list .tb_item .tb_item_content span{ position:absolute; top:50%; color:#fff; width:100%; left:0; padding:10px; text-align:center; font-family:Avenir Next LT Pro; font-size:40px; line-height:40px; text-transform:uppercase; z-index:3; transform:translateY(-50%); -moz-transform:translateY(-50%); -webkit-transform:translateY(-50%); -ms-transform:translateY(-50%);box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box; text-decoration:none;}
 
 #formsel {
     display: inline-block;
@@ -213,58 +191,12 @@ textarea{ height:140px;}
 }
 #formsel .locations { float: left; width: 200px;}
 #formsel .no-display { display:none; font-size:1.5rem;}
-.sbHolder { border:2px solid #00568b; border-radius:20px; box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box; color:#00568b; font-family:"Avenir Next LT Pro",sans-serif; font-size:16px; height:28px; margin:7px auto 0 auto; font-weight:bold; padding:0 28px; position:relative; text-transform:uppercase; width:100%;}
-.sbToggle { background:url("../image/dropdown-icon.png") no-repeat scroll 0 0; display: block; height: 23px; outline: medium none; position: absolute; right: 17px; top: 10px; width: 25px;}
-.sbSelector:link, .sbSelector:visited, .sbSelector:hover { outline: medium none; text-decoration: none;}
-.sbSelector { color: #00568b; display: block; height: 24px; line-height:24px; left: 6%; outline: medium none; overflow: hidden; position: absolute; text-align: center; top: 0; width: 85%; z-index: 122;}
-.sbHolder:hover .sbSelector{ color:#58b4e5}
-.sbOptions { border-colors: none; background-color: #ffffff;
-    border-image:none; border-radius:0 0 17px 17px;
-    border: 2px solid #00568b;
-    border-top: 0 none -moz-use-text-color;
-    box-sizing:border-box; color:#228dc1; left: -2px; list-style: outside none none; margin: -10px 0 0; opacity: 0.9; overflow-y: auto; padding: 16px 0; position: absolute; width:200px; z-index: 2; top:28px;}
-.sbOptions li { color: #228dc1; padding: 0 7px;}
-.sbOptions li:first-child { display: none;}
-.sbOptions a { color: #4c9fc7; display: block; outline: medium none; padding: 7px 0 7px 3px; line-height:16px;}
-.sbOptions a:link, .sbOptions a:visited { color: #228dc1; text-decoration: none;}
-.sbOptions a:hover, .sbOptions a:focus, .sbOptions a.sbFocus { color: #00568b;}
 
 .header-box{ padding:0; margin: 0px -15px 15px; position:relative;}
 .header-box img{ width:100%; height:auto;}
 .hb_item_content{ position:absolute; bottom:40px; text-align:center; color:#fff; width:100%;}
 .hb_item_content .header-text{ font-size:66px; font-family:"Avenir Next LT Pro",sans-serif; font-weight:bold; line-height:normal;}
 .hb_item_content .sub-text{ font-size:26px; font-family:"Avenir Next LT Pro Demi",sans-serif; line-height:33px; margin-left:13px;}
-
-
-.three_box .tb_list li:first-child {
-    border-right: 7px solid #ffffff !important;
-    border-left:10px solid #ffffff!important;
-
-    border-bottom:10px solid #ffffff!important;
-}
-.three_box .tb_list li:last-child {
-    border-left: 7px solid #ffffff !important;
-    border-right:10px solid #ffffff !important;
-
-    border-bottom:10px solid #ffffff!important;
-}
-.three_box .tb_list li:nth-child(2){
-
-    border-bottom:10px solid #ffffff!important;
-    border-right: 8px solid #ffffff !important;
-    border-left:8px solid #ffffff!important;
-}
-
-.two_box .tb_list li:first-child {
-    border-right: 8px solid #ffffff !important;
-    border-left:0px!important;
-    border-top:0px!important;
-}
-.two_box .tb_list li:last-child {
-    border-left: 8px solid #ffffff !important;
-    border-right: 0px solid #ffffff !important;
-    border-top:0px!important;
-}
 
 .three {
     margin-right: 10px;
@@ -348,10 +280,6 @@ textarea{ height:140px;}
 
         margin-left: auto;
     }
-    .three_box .tb_list .tb_item .tb_item_content span{
-        font-size: 24px;
-
-    }
     .hb_item_content .header-text{
         font-size:54px;}
     .hb_item_content .sub-text{
@@ -365,9 +293,6 @@ textarea{ height:140px;}
     .navbar-collapse { padding-left: 0; padding-right: 0;}
     .navbar-form.navbar-right{ margin-right:25px;padding-left:11px;padding-right:11px;}
     .flex-control-nav {bottom:0px !important; height: 24px;}
-    .two_box .tb_list .tb_item .tb_item_content span{
-        text-align: center !important;
-    }
     h1{
         font-size:44px;
     }
@@ -402,8 +327,6 @@ textarea{ height:140px;}
     .posit{margin-bottom: -42px;   position: relative;    z-index: 1;}
     .menublock{margin:10px 0 0;}
     .nav>li>a{ padding-left:20px; padding-right:20px;}
-    .two_box .tb_list .tb_item{ width:100%; float:none; border:0;}
-    .three_box .tb_list .tb_item{ width:100%; float:none; border:0;}
     .entry-content .img_left{ float:none; margin-right:0; margin-bottom:10px;}
     .entry-content .img_right{ float:none; margin-left:0; margin-bottom:10px;}
     .hb_item_content .sub-text {  font-family: "Avenir Next LT Pro Demi",sans-serif;  font-size: 12px;  line-height: 20px;  margin-left: 13px;}
@@ -418,10 +341,6 @@ textarea{ height:140px;}
         right:10px;
     }
 
-
-    .three_box .tb_list .tb_item .tb_item_content span {  box-sizing: border-box;  color: #fff;  font-family: Avenir Next LT Pro;  font-size: 26px;
-        left: 0;  line-height: 40px;  padding: 10px;  position: absolute;  text-align: center !important;  text-decoration: none;  text-transform: uppercase;
-        top: 50%; transform: translateY(-50%);  width: 100%;  z-index: 3;}
     .sectionleftul {
         text-align:center;
         float:none;
@@ -455,39 +374,7 @@ textarea{ height:140px;}
         margin: 0 auto;
         width: 200px;
     }
-    .three_box .tb_list .tb_item .tb_item_content{
-        margin-left:0px;}
-    .two_box .tb_list li:first-child {
-        border-right: 0 solid #ffffff !important;
-    }
-    .two_box .tb_list li:last-child {
-        border-left: 0px solid #ffffff !important;
-    }
 
-
-
-    .three_box .tb_list li:first-child {
-        border: 10px solid #ffffff !important;
-        border-top-width: 5px;
-        margin-bottom:0px;
-        display: inline-block !important;
-    }
-    .three_box .tb_list li:nth-child(2){
-        border-top:0px solid #ffffff !important;
-        border-bottom:10px solid #ffffff !important;
-        border-left:10px solid #ffffff !important;
-        border-right:10px solid #ffffff !important;
-        margin-bottom:0px;
-        display: inline-block !important;
-    }
-    .three_box .tb_list li:last-child {
-        border-top:0px solid #ffffff !important;
-        border-bottom:10px solid #ffffff !important;
-        border-left:10px solid #ffffff !important;
-        border-right:10px solid #ffffff !important;
-        margin-bottom:0px;
-        display: inline-block !important;
-    }
     .flex-control-nav {bottom:0px !important; height: 24px;}
     .flex-direction-nav a::before{ font-size: 25px!important;}
     .flex-direction-nav a{top:40% !important;}
@@ -518,11 +405,6 @@ textarea{ height:140px;}
         padding-right:0px;
     }
     .entry-content table {margin-left:0px;}
-    .two_box .tb_list .tb_item .tb_item_content span{
-        font-size:26px;
-        text-align: center !important;
-    }
-
 
     .search-form .screen-reader-text{
         font-size:16px;
@@ -572,16 +454,11 @@ textarea{ height:140px;}
 }
 
 @media (max-width:319px) {
-    .two_box .tb_list .tb_item .tb_item_content span {
-        font-size: 18px;
-        line-height: 1.2;
-    }
     .social-icon li a.hyoutube, .social-icon li .hinsta{display:none!important;			}
     .login{margin-left:11px;}
     .header-box img{  height: 125px;			}
     .hb_item_content .header-text{font-size: 24px;}
     .hb_item_content .sub-text{font-size: 11px;}
-    .three_box .tb_list .tb_item .tb_item_content span{font-size: 20px;}
     .flex-control-nav {bottom: 0 !important;  height: 18px;}
     h1{font-size:24px;}
     h2{font-size:22px;}
