--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 
 	img_left	=	images goes left
 	img_right	=	images goes right
-
 */
 @font-face {
     font-family: 'Avenir Next LT Pro'; src: url('../fonts/AvenirNextLTPro-Regular.eot'); src: url('../fonts/AvenirNextLTPro-Regular.eot?#iefix') format('embedded-opentype'), url('../fonts/AvenirNextLTPro-Regular.woff2') format('woff2'), url('../fonts/AvenirNextLTPro-Regular.woff') format('woff'), url('../fonts/AvenirNextLTPro-Regular.ttf') format('truetype'), url('../fonts/AvenirNextLTPro-Regular.svg#AvenirNextLTPro-Regular') format('svg'); font-weight: normal; font-style: normal;}
@@ -115,13 +114,13 @@ img {
 }
 h1,h2,h3,h4,h5,h6 {
     font-family:"Avenir Next LT Pro Demi",sans-serif;
-    color:#00568b;
+    color: #14a7e0;
     line-height:110%;
     text-transform:uppercase;
     margin:1.2rem 0 1.5rem;
 }
 .blue_btn {
-    color:#228dc1;
+    color: #0074c8;
     font-size:16px;
     line-height:16px;
     font-weight:bold;
@@ -149,7 +148,7 @@ h1,h2,h3,h4,h5,h6 {
     font-family: "Avenir Next LT Pro Demi",sans-serif;
 }
 .blue_btn:hover, .blue_btn:focus {
-    color:#58b4e5;
+    color: #14a7e0;
     border-color:#f08a41;
     text-decoration:none;
     outline:none;
@@ -265,9 +264,9 @@ textarea {
 }
 .selected .custom-select {
     background: #fff;
-    border: 2px solid #00568b;
+    border: 2px solid #14a7e0;
     border-radius: 20px;
-    color: #00568b;
+    color: #14a7e0;
     font-size: 16px;
     font-weight: bold;
     text-align: center;
@@ -306,7 +305,7 @@ textarea {
     background-position: -3px -64px;
 }
 .login {
-    color:#00568b;
+    color: #14a7e0;
     display:inline-block;
     font-size:1.2em;
     margin-left:20px;
@@ -314,10 +313,11 @@ textarea {
     text-transform:uppercase;
     font-weight:bold;
 }
-.login:hover { color: #228dc1; text-decoration: none;}
-.menublock{margin:0; background-color:#00568b}
+.login:hover { color: #0074c8; text-decoration: none;}
+.menublock{margin:0; background-color: #14a7e0
+}
 .menublock .navbar-default  {
-    background-color:#00568b;
+    background-color: #14a7e0;
     border:none;
 }
 .menublock .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
@@ -341,7 +341,7 @@ textarea {
     text-transform: uppercase;
 }
 .menublock li.current-menu-item a, .menublock li a:hover {
-    background-color:#58b4e5 !important;
+    background-color: #14a7e0 !important;
 }
 .menublock nav {
     margin:0px;
@@ -376,7 +376,7 @@ textarea {
     position:absolute;
     right:10px;
     top:11px;
-    color:#58b4e5;
+    color: #14a7e0;
     cursor:pointer;
 }
 .slider_section {
@@ -399,7 +399,7 @@ textarea {
 }
 
 .footer_section {
-    background:#00568b;
+    background: #14a7e0;
     padding:18px 0;
 }
 .sectionleftul {
@@ -476,7 +476,7 @@ textarea {
 }
 .inner_block h2 {
     border-bottom: 1px solid #fff;
-    color:#00568b;
+    color: #14a7e0;
     font-family:"Avenir Next LT Pro Demi",sans-serif;
     font-weight:bold;
     font-size:18px;
@@ -496,7 +496,7 @@ textarea {
     padding:0 0 24px;
 }
 .menu_list li a {
-    color:#228dc1;
+    color: #0074c8;
     display:block;
     font-family:"Avenir Next LT Pro Demi",sans-serif;
     font-size:16px;
@@ -636,7 +636,7 @@ textarea {
 }
 
 .footer_menu_widget_else a {
-    color: #00568b;
+    color: #14a7e0;
     text-decoration: none;
 }
 
@@ -813,7 +813,7 @@ textarea {
         color:#fff;
     }
     .login:hover {
-        color:#228dc1;
+        color: #0074c8;
         text-decoration:none;
     }
     .social-area {
@@ -1045,7 +1045,7 @@ textarea {
 }
 
 .menublock li.current-menu-item a, .menublock li a:hover {
-    background-color: #58b4e5 !important;
+    background-color: #14a7e0 !important;
 }
 
 .body-text /* For Text Body Content */
@@ -1140,7 +1140,7 @@ textarea {
 }
 /* Campus Staff Header */
 .campus-staff-header {
-    background-color:#58b4e5;
+    background-color: #14a7e0;
     color:#ffffff;
     text-align:center;
     font-size:2.5rem;
