--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,6 @@ input:[type="text"]::-webkit-input-placeholder {
 textarea {
     height:140px;
 }
-
 .pagetop {
     margin:0;
 }
@@ -281,13 +280,14 @@ textarea {
 }
 .social-icon li {
     float: left;
-    margin: 9px 3px 0;
+    padding-top:0.5px;
+    margin: 6px 3px 0;
 }
 
 .social-icon li a {
     display: inline-block;
-    height: 23px;
-    width: 23px;
+    height: 26px;
+    width: 26px;
 }
 .social-icon li a.hyoutube {
     background: #fff url("../image/LRG_Icon_YouTube01.png") no-repeat scroll center center / 100% auto; border: 1px solid #fff;
@@ -310,7 +310,7 @@ textarea {
     display:inline-block;
     font-size:1.2em;
     margin-left:20px;
-    margin-top:18px;
+    margin-top:15px;
     text-transform:uppercase;
     font-weight:bold;
 }
@@ -398,7 +398,6 @@ textarea {
 .mid_innerright {
     float:right;
 }
-
 .footer_section {
     background: #14a7e0;
     padding:18px 0;
@@ -507,7 +506,6 @@ textarea {
 .menu_list li a:hover, .sectionleft li a:hover {
     text-decoration:none;
 }
-
 .entry-content {
     padding:15px;
     font-size:24px;
@@ -564,33 +562,24 @@ textarea {
     clear:both;
     display:block;
 }
-
-
 .three {
     margin-right: 10px;
 }
-
-/* custom 7/6/2016*/
-
 .site-title {
     font-size: 2.5rem;
     font-weight: bold;
     margin-top: 15px;
 }
-
 .site-description {
     margin-top: 15px;
 }
-
 .menu_list ul li {
     display: block;
 }
-
 .footer_menu_widget_else a {
     color: #14a7e0;
     text-decoration: none;
 }
-
 .sectionleftul li ul li a {
     color:#FFF;
     margin:7px 0 0 11px;
@@ -611,7 +600,6 @@ textarea {
 .sectionleftul .menu_list li {
     min-width: 205px;
 }
-
 
 @media only screen and (min-width:1024px) and (max-width:1200px){
     .nav>li>a {
@@ -658,16 +646,13 @@ textarea {
 @media (max-width:1024px){
     .social-area.clearfix {
         margin-right: 0px!important;
-
     }
     .logo {
         margin-left: auto;
     }
-  
     .footer_social {
         margin: 0 auto;
     }
-
     .footer_social > li:last-child {
         margin-right: 0 !important;
     }
@@ -676,6 +661,7 @@ textarea {
     }
     .futr_menublock{margin:0px;}
 }
+
 @media (min-width:768px){
     .navbar-collapse {
         padding-left: 0;
@@ -693,11 +679,11 @@ textarea {
     h1{
         font-size:44px;
     }
-
     .entry-content p{
         font-size:20px;
     }
 }
+
 @media (max-width:767px){
     .social-area.clearfix {
         margin-top: 23px !important;
@@ -777,7 +763,6 @@ textarea {
         padding-left:20px;
         padding-right:20px;
     }
-       
     .footer_container {
         background-color: #dcddde;
         padding: 0px 27px 0 18px;
@@ -786,7 +771,6 @@ textarea {
         margin-top: 40px;
         right:10px;
     }
-
     .sectionleftul {
         text-align:center;
         float:none;
@@ -809,9 +793,6 @@ textarea {
         margin-right: 10px;
         float: none;
     }
-
-
-
     .flex-control-nav {
         bottom:0px !important;
         height: 24px;
@@ -871,7 +852,6 @@ textarea {
         padding: 0 29px;
         text-align: center !important;
     }
-
     .esg-grid.esg-layout-even.esg-container {
         margin: 10px 0;
         padding: 0 !important;
@@ -879,13 +859,13 @@ textarea {
     .filterall.eg-liquid-front-page-wrapper.tp-esg-item.itemtoshow.isvisiblenow {
         width: 100% !important;
     }
-
     .location-block {
         float: none !important;
         margin-left: 0 !important;
         width: auto !important;
     }
 }
+
 @media (max-width:479px) {
     .flex-direction-nav a {
         top:35% !important;
@@ -922,7 +902,6 @@ textarea {
     .login {
         margin-left:11px;
     }
-    
     .flex-control-nav {
         bottom: 0 !important;
         height: 18px;
@@ -997,12 +976,10 @@ textarea {
 .service-times:first-child {
     font-size: 5rem !important;
 }
-
 .ssat {
     font-size: 3rem;
     padding-bottom: .2rem;
 }
-
 .sstime {
     font-size: 4rem;
 }
@@ -1019,10 +996,12 @@ textarea {
 .campus-addresses p {
     padding-left:0px;
 }
+
 /* Campus GPS Address */
 .campus-gps-address {
     clear: both;
 }
+
 /* Mailing Address */
 .campus-mailing-address {
     margin-top:20px;
@@ -1030,11 +1009,13 @@ textarea {
 .campus-get-directions {
     padding: 0 30px;
 }
+
 /* Get Directions */
 .campus-get-directions input {
     display: inline;
     max-width: 60%;
 }
+
 /* Campus Staff Header */
 .campus-staff-header {
     background-color: #14a7e0;
@@ -1045,11 +1026,13 @@ textarea {
     clear:both;
     margin: 30px 0;
 }
+
 /* Campus Staff Box */
 .campus-staff {
     display: inline-block;
     width: 100%;
 }
+
 /* Styling for individual staff box */
 .individual-staff {
     clear:both;
@@ -1071,6 +1054,7 @@ textarea {
 .individual-staff img {
     float:left;
 }
+/* Location Block */
 .location-block {
     float: left;
     margin-left:177px; width: 32%;
@@ -1078,6 +1062,7 @@ textarea {
 .location-block .selectric .label {
     font-family:'Avenir Next LT Pro',sans-serif!important;
 }
+
 /* Pastor Bios Styling */
 .pastors-bios h2 {
     margin-bottom: 0;
@@ -1085,12 +1070,10 @@ textarea {
 .pastors-bios h3 {
     margin-bottom: 0;
 }
-
 .gc-single-series-sermons-img {
     display: block;
     margin: 20px auto;
 }
-
 .gc-series-list-sermons-img {
     max-width: 500px !important;
     overflow: hidden;
