--- a/css/style.css
+++ b/css/style.css
@@ -98,13 +98,13 @@ img {
     text-align: center !important;
 }
 .wp-caption {
-    text-align: none;
+    text-align: initial;
 }
 .wp-caption-text {
-    text-align: none;
+    text-align: initial;
 }
 .gallery-caption {
-    text-align: none;
+    text-align: initial;
 }
 .sprite {
     display:inline-block;
@@ -217,20 +217,24 @@ input[type="text"], select, textarea{
     -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
     transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
-input:[type="text"]:focus {
+
+input[type="text"]:focus {
     border-color: #66afe9;
     outline: 0;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
 }
-input:[type="text"]::-moz-placeholder {
+
+input[type="text"]::-moz-placeholder {
     color: #999999;
     opacity: 1;
 }
-input:[type="text"]:-ms-input-placeholder {
+
+input[type="text"]:-ms-input-placeholder {
     color: #999999;
 }
-input:[type="text"]::-webkit-input-placeholder {
+
+input[type="text"]::-webkit-input-placeholder {
     color: #999999;
 }
 textarea {
@@ -313,16 +317,24 @@ textarea {
     text-transform:uppercase;
     font-weight:bold;
 }
-.login:hover { color: #0074c8; text-decoration: none;}
-.menublock{margin:0; background-color: #14a7e0
+
+.login:hover {
+    color: #0074c8;
+    text-decoration: none;
 }
+
+.menublock {
+    margin: 0;
+    background-color: #14a7e0
+}
+
 .menublock .navbar-default  {
     background-color: #14a7e0;
     border:none;
 }
 .menublock .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
     background: none;
-    color: none;
+    color: initial;
 }
 .menublock ul li {
     border-left: 1px solid #ffffff;
@@ -538,7 +550,7 @@ textarea {
 }
 
 .entry-content ul {
-    padding:0 30px;
+    padding: 0 0 0 0;
 }
 .entry-content ul li {
     color: #333333;
@@ -564,6 +576,9 @@ textarea {
 .three {
     margin-right: 10px;
 }
+
+/* custom 7/6/2016*/
+
 .site-title {
     font-size: 2.5rem;
     font-weight: bold;
@@ -629,7 +644,7 @@ textarea {
 @media only screen and (min-width:768px) and (max-width:991px){
 
     .sectionleftul .menu_list li {
-        min-width: auto;
+        width: auto;
     }
 }
 
@@ -1053,7 +1068,7 @@ textarea {
 .individual-staff img {
     float:left;
 }
-/* Location Block */
+
 .location-block {
     float: left;
     margin-left:177px; width: 32%;
@@ -1074,6 +1089,187 @@ textarea {
     margin: 20px auto;
 }
 .gc-series-list-sermons-img {
-    max-width: 500px !important;
+    width: 100%;
     overflow: hidden;
+}
+
+.single-sermon-title img {
+    margin-top: 15px;
+}
+
+.entry-content.sermon-series-desc > p {
+    font-size: 24px !important;
+}
+
+.entry-content.sermon-series-resource {
+    padding-left: 60px;
+    padding-right: 60px;
+}
+
+.entry-content.sermon-series-message {
+    padding-left: 60px;
+    padding-right: 60px;
+}
+
+.gc-individual-sermon-list {
+    padding-left: 45px;
+    padding-right: 45px;
+}
+
+.other-msg-title {
+    padding-left: 8px !important;
+}
+
+/***** gc sermon search *****/
+.search-field {
+    width: 60%;
+    background: #e2e2e2;
+    border: none;
+    box-shadow: none;
+    height: 60px;
+    padding-left: 20px;
+    border: 1px solid #ccc;
+}
+
+.gc-sermons-search .second-row {
+    padding-top: 15px;
+}
+
+.gc-sermons-search .first-row label {
+    width: 100%;
+    padding-top: 15px;
+}
+
+.gc-sermons-search .first-row .form-group {
+    width: 100%;
+}
+
+.gc-sermons-search label {
+    width: 100%;
+}
+
+.gc-sermons-search span {
+    font-size: 18px;
+}
+
+input.search-submit {
+    margin-right: 20px;
+    background: #14a7e0;
+    height: 60px;
+    color: #fff;
+    border: none;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.page-template-template-messages h1 {
+    display: block;
+    padding-left: 20px;
+}
+
+h2.gc-series-search-results-title, h2.gc-sermons-search-results-title {
+    display: block;
+    font-size: 28px;
+}
+
+.gc-sermons-search-results, .gc-series-search-results {
+    padding-left: 20px;
+}
+
+a.home-btn {
+    background: #23527c;
+    padding: 8px 18px;
+    border-radius: 3px;
+    color: #fff;
+}
+
+#single-sermon-content .row {
+    padding-bottom: 10px;
+    /*border-bottom: 1px solid #e2e2e2;*/
+    margin-bottom: 10px;
+}
+
+#message-summary .gc-right-col {
+    text-align: justify;
+}
+
+.entry-content ul.gc-sermon-resources-list, .entry-content ul.lc-container {
+    padding: 0;
+}
+
+.entry-content ul.lc-container li.gc-sermon-resources-list-item {
+    display: list-item !important;
+    list-style-type: disc !important;
+    padding-left: 15px;
+}
+
+.entry-content ul.gc-sermon-resources-list .lc-head {
+    font-size: 1em;
+    font-weight: 700;
+}
+
+.entry-content ul.gc-sermon-resources-list li {
+    list-style-type: none;
+}
+
+.entry-content ul.gc-sermon-resources-list li.lc-list {
+    width: 45%;
+    display: inline-block;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    vertical-align: top;
+}
+
+.entry-content ul.gc-sermon-resources-list li.gc-sermon-resources-list-item {
+    width: 100%;
+    display: inline-block;
+    margin-right: 20px;
+    margin-bottom: 0px;
+}
+
+.entry-content ul.gc-sermon-resources-list ul.single-item li.gc-sermon-resources-list-item {
+    width: 100%;
+}
+
+#message-resource {
+    margin-top: 10px;
+}
+
+h1.gc-sermon-title {
+    margin-top: 30px;
+    font-size: 32px;
+}
+
+.entry-content .gc-individual-sermon-list .gc-sermons-list {
+    padding-top: 5px;
+    display: table;
+    margin: 0 auto;
+	padding-right: 0;
+}
+
+.entry-content .gc-individual-sermon-list .gc-sermons-list li:nth-child(1):nth-last-child(1) {
+    width: inherit !important;
+}
+
+.entry-content .gc-individual-sermon-list .gc-sermons-list li:nth-child(1):nth-last-child(2),
+.entry-content .gc-individual-sermon-list .gc-sermons-list li:nth-child(2):nth-last-child(1)  {
+    width: inherit !important;
+}
+.entry-content .gc-individual-sermon-list .gc-sermons-list li:nth-child(1):nth-last-child(3),
+.entry-content .gc-individual-sermon-list .gc-sermons-list li:nth-child(2):nth-last-child(2),
+.entry-content .gc-individual-sermon-list .gc-sermons-list li:nth-child(3):nth-last-child(1)  {
+    width: inherit !important;
+}
+
+.gc-series-wrap h4 {
+    margin-left: 30px;
+    border-bottom: none !important;
+    text-decoration: underline;
+    font-size: 24px;
+}
+
+@media screen and (max-width: 800px) {
+    .entry-content ul.gc-sermon-resources-list li.lc-list {
+        width: 100%;
+    }
 }
