--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,8 @@ h2 {
 h3 {
     font-size:30px;
 }
-input[type="text"], select, textarea{
+
+input[type="text"], #liquidChurchPassword, select, textarea {
     display: block;
     width: 100%;
     height: 34px;
@@ -349,7 +350,7 @@ textarea {
     display: block;
     font-size: 1.5rem;
     font-family:'Avenir Next Cyr W00 Bold', sans-serif;
-    padding: 15px 40px;
+    padding: 15px 39px;
     text-transform: uppercase;
 }
 .menublock li.current-menu-item a, .menublock li a:hover {
