--- a/style.css
+++ b/style.css
@@ -13,3 +13,7 @@ Text Domain: liquidchurch
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */
+.chk-box{
+vertical-align: middle;
+margin-right:5px;
+}
