- Adding individual-staff css padding. - Adding empty .lqd-blog css class. - Removing told old images. - Adding <br /> to template-tags.php for blog post display - Fixing campus code for give. - Significantly updated content-single.php - Removed meta from blog posts. - Removed unneeded archive-ccbpress-core.php file. - Added category-love-week.php for templating love week blog. - Updated functions.php with new code for enqueuing text2give script. -

--- a/css/style.css
+++ b/css/style.css
@@ -1275,6 +1275,7 @@ textarea {
     display: inline-block;
     width: 100%;
     margin: 10px auto 0 auto;
+    padding: auto 10px auto 10px;
 }
 
 .individual-staff span {
@@ -1294,6 +1295,10 @@ textarea {
 
 .location-block .selectric .label {
     font-family: 'Avenir Next LT Pro', sans-serif !important;
+}
+
+.lqd-blog /* For Text Body Content */
+{
 }
 
 /* Pastor Bios Styling */
