--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: LIQUIDCHURCH
-Theme URI:
+Theme URI: http://www.liquidchurch.com/
 Author: EmizenTech Team
 Author URI: http://emizentech.com/
-Description: The Liquid Church theme for WordPress takes us back to the blog, featuring a full range of post formats, each displayed beautifully in their own unique way. Design details abound, starting with a vibrant color scheme and matching header images, beautiful typography and icons, and a flexible layout that looks great on any device, big or small.
+Description:
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
