--- a/css/lqd-messages.css
+++ b/css/lqd-messages.css
@@ -182,6 +182,9 @@ h1.gc-sermon-title {
     text-decoration: underline;
     font-size: 24px;
 }
+#mav-body {
+    padding: 0px;
+}
 @media screen and (max-width: 800px) {
     .entry-content ul.gc-sermon-resources-list li.lc-list {
         width: 100%;
