lqd-messages.css -  Added CSS rule #mav-entry .gc-2-cols h4 that centers the year on the main messages view, removes text decoration, and decreases padding. - Added CSS rule #mav-entry li.gc-item.gc-thumb which decreases space between series. - Added CSS rule .page.mav-body box-shadow to remove shadowing around page. - Added #mav-entry to remove unnecessary padding. single-fast.php/content-fast.php - Added for the blog, right now only allows applying one by one. Added single-cat-fast.php to try to theme all blog posts in the category, but not working currently. - Added a permalink manager option to force the manager not to strip out dashes.

--- a/css/lqd-messages.css
+++ b/css/lqd-messages.css
@@ -182,9 +182,31 @@ h1.gc-sermon-title {
     text-decoration: underline;
     font-size: 24px;
 }
-#mav-body {
+
+#mav-entry .gc-2-cols h4 {
+    text-align: center;
+    margin: auto;
+    width: 100%;
+    text-decoration: none;
+    font-size: 3rem;
+    padding-top: 5px;
+    padding-bottom:5px;
+}
+
+#mav-entry li.gc-item.gc-thumb {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
+
+.page.mav-body {
+    box-shadow: 0 0 0;
+}
+
+#mav-entry {
     padding: 0px;
 }
+
 @media screen and (max-width: 800px) {
     .entry-content ul.gc-sermon-resources-list li.lc-list {
         width: 100%;
