- lqd-messages.css -- Combined #mav-entrys -- Added .mav-series -- Added .entry-content.sermon-series-desc.mav-series > p -- Added .entry-content.sermon-series-message.mav-series -- Changed unit for entry-content font-size from px to em - Added content-single-gc-sermons-app-view.php - Added content-taxonomy-series-app-view.php - Updated CSS file version to ensure cache busting. - single-gc-sermons-app-view.php -- Added #mav-single -- Set to use single-gc-sermons-app-view template instead of normal. - taxonomy-gc-sermon-series-app-view.php -- Added class mav-series -- Set to use content-taxonomy-series-app-view template instead of normal.

--- a/css/lqd-messages.css
+++ b/css/lqd-messages.css
@@ -205,6 +205,23 @@ h1.gc-sermon-title {
 
 #mav-entry {
     padding: 0px;
+    font-size: 1.5em;
+}
+
+.mav-series {
+    padding-top:5px;
+    padding-left:5px;
+    padding-right:5px;
+    padding-bottom:5px;
+}
+
+.entry-content.sermon-series-desc.mav-series > p {
+    font-size: 1em !important;
+}
+
+.entry-content.sermon-series-message.mav-series {
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 @media screen and (max-width: 800px) {
