--- a/css/style.css
+++ b/css/style.css
@@ -631,7 +631,7 @@ textarea {
 
 .entry-content {
     padding: 15px;
-    font-size: 24px;
+    font-size: 1.5em; /* 24px */
     line-height: 135%;
     color: #333;
 }
