--- a/css/lqd-messages.css
+++ b/css/lqd-messages.css
@@ -215,6 +215,24 @@ h1.gc-sermon-title {
     padding-bottom:5px;
 }
 
+.mav-series {
+    font-size: 1.3em;
+}
+
+#mav-single .entry-content {
+    font-size: 1.3em;
+    line-height: 120%;
+}
+
+#mav-single .col-sm-3 {
+   /* float:left; */
+}
+
+#mav-single .col-md-12 {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
 .entry-content.sermon-series-desc.mav-series > p {
     font-size: 1em !important;
 }
