- Upgraded Bootstrap from 3.3.6 to 3.3.7 - Added job_description and lqd-no-bullets CSS classes

--- a/css/style.css
+++ b/css/style.css
@@ -1136,3 +1136,10 @@ textarea {
 {
     float:left;
 }
+.job_description ul
+{
+    padding-left:40px;
+}
+.lqd-no-bullets li {
+    list-style: none;
+}
